<resources>
    <string name="app_name">SK Webs</string>
    <string name="logo">Logo</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="submit">Submit</string>
    <string name="terms_and_conditions">terms and conditions</string>
    <string name="accept">Accept</string>
</resources>